<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ProgressBar android:id="@+id/progressBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="?android:attr/progressBarStyleHorizontal" />
    
    <no.hig.strand.lars.todoity.views.DraggableListView 
        android:id="@+id/today_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <LinearLayout style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <Button android:id="@+id/today_delete_list_button"
            style="?android:buttonBarButtonStyle"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:paddingTop="5dp"
        	android:paddingBottom="5dp"
        	android:text="@string/delete_list"
        	android:textAppearance="?android:textAppearanceSmall"
        	android:drawableTop="@drawable/ic_content_discard" />
        
        <Button android:id="@+id/today_edit_list_button"
            style="?android:buttonBarButtonStyle"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:paddingTop="5dp"
        	android:paddingBottom="5dp"
        	android:text="@string/edit_list"
        	android:textAppearance="?android:textAppearanceSmall"
        	android:drawableTop="@drawable/ic_content_edit" />   
        
        <Button android:id="@+id/today_new_list_button"
            style="?android:buttonBarButtonStyle"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:paddingTop="5dp"
        	android:paddingBottom="5dp"
        	android:text="@string/new_list"
        	android:textAppearance="?android:textAppearanceSmall"
        	android:drawableTop="@drawable/ic_content_new" />
        
    </LinearLayout>

</LinearLayout>
